Ejecutados los comandos del guion de la P2 y añadido comentarios de clase a DefensesSelection.cpp

--- a/ALBA_GOMEZ_IVAN/p2/Makefile
+++ b/ALBA_GOMEZ_IVAN/p2/Makefile
@@ -1,4 +1,4 @@
-APELLIDO1_APELLIDO2_NOMBRE = APELLIDO1_APELLIDO2_NOMBRE
+APELLIDO1_APELLIDO2_NOMBRE = ALBA_GOMEZ_IVAN
 LEVEL = 3324
 
 ####################### FIN CONFIGURACION ###########################
